Fix bug: MIDI causes crash on onContentSettingChanged()

MIDI subscription will cause crash on onContentSettingChanged() because there
isn't corresponding content setting. Skip it because MIDI is constant permission
and it never changes anyway.

BUG=599060

Review URL: https://codereview.chromium.org/1885823002

Cr-Commit-Position: refs/heads/master@{#387174}

Former-commit-id: 3c02c9483d9b17a50f9a9dd45a72f8da4a7c4c73