chrome/browser/permissions/permission_manager_unittest.cc
@@ -301,3 +301,20 @@ TEST_F(PermissionManagerTest, ChangesBackAndForth) {
 
   GetPermissionManager()->UnsubscribePermissionStatusChange(subscription_id);
 }
+
+TEST_F(PermissionManagerTest, SubscribeMIDIPermission) {
+  int subscription_id = GetPermissionManager()->SubscribePermissionStatusChange(
+      PermissionType::MIDI, url(), url(),
+      base::Bind(&PermissionManagerTest::OnPermissionChange,
+                 base::Unretained(this)));
+
+  CheckPermissionStatus(PermissionType::GEOLOCATION, PermissionStatus::ASK);
+  GetHostContentSettingsMap()->SetContentSettingDefaultScope(
+      url(), url(), CONTENT_SETTINGS_TYPE_GEOLOCATION, std::string(),
+      CONTENT_SETTING_ALLOW);
+  CheckPermissionStatus(PermissionType::GEOLOCATION, PermissionStatus::GRANTED);
+
+  EXPECT_FALSE(callback_called());
+
+  GetPermissionManager()->UnsubscribePermissionStatusChange(subscription_id);
+}
